Añadida EntityQueueActivity y su respectivo Layout.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity
             android:name=".CreateQueueActivity"
             android:label="@string/title_activity_create_queue"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".EntityQueueActivity"></activity>
     </application>
 
 </manifest>
